Prefer Boolean.valueOf